fix(stats): fixed gap between widgets

--- a/src/app/core/dashboard/dashboard.component.scss
+++ b/src/app/core/dashboard/dashboard.component.scss
@@ -131,7 +131,7 @@
 
 			.grid {
 				display: grid;
-				gap: 10%;
+				gap: 4rem;
 				margin-top: 4rem;
 
 				&.widgets-small {
